/*
 * Copyright (C) 2017-2019 Dremio Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto2";
package exec.accesscontrol;

option java_package = "com.dremio.exec.proto";
option java_outer_classname = "AccessControlRPC";
option optimize_for = SPEED;
option java_generate_equals_and_hash = true;

enum RpcType {
    ACK = 0;

    REQ_MEMBERSHIP_INFO = 1;
    RESP_MEMBERSHIP_INFO = 2;

    REQ_PRIVILEGE_INFO = 3;
    RESP_PRIVILEGE_INFO = 4;

    REQ_ROLE_INFO = 5;
    RESP_ROLE_INFO = 6;
}

message MembershipInfo {
    optional string role_name = 1;
    optional string member_name = 2;
    optional string member_type = 3;
}

message MembershipInfoRequest {
}

message MembershipInfoResponse {
    repeated MembershipInfo membership_info = 1;
}

message PrivilegeInfo {
    optional string grantee_type = 1;
    optional string grantee = 2;
    optional string grant_type = 3;
    optional string entity = 4;
    optional string privilege = 5;
}

message PrivilegeInfoRequest {
}

message PrivilegeInfoResponse {
    repeated PrivilegeInfo privilege_info = 1;
}

message RoleInfo {
    optional string role_name = 1;
    optional string source = 2;
    optional string role_type = 3;
}

message RoleInfoRequest {
}

message RoleInfoResponse {
    repeated RoleInfo role_info = 1;
}
